# parcel

./: .editorconfig  .eslintignore  .prettierignore  CHANGELOG.md  Cargo.toml  SECURITY.dr  gulpfile.js  package.json
crates/dev-dep-resolver/: Cargo.toml
crates/dev-dep-resolver/src/: lib.rs  main.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/node-bindings/: Cargo.toml
crates/node-bindings/src/: image.rs  lib.rs  resolver.rs
crates/parcel-resolver/: Cargo.toml  README.md
crates/parcel-resolver/benches/: benchmark.rs
crates/parcel-resolver/src/: cache.rs  error.rs  fs.rs  invalidations.rs  lib.rs  package_json.rs  specifier.rs
crates/parcel-resolver/src/json_comments_rs/: mod.rs
docs/: AdjacencyList.md
scripts/: tag-release.mjs
