[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "parcel-resolver"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/parcel-bundler/parcel"
keywords = ["resolver", "node", "cjs", "esm", "bundler"]
description = "Node.js compatible module resolver used by the Parcel bundler"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
dashmap = { version = "6.1.0", features = ["raw-api"] }
glob-match = "0.2.1"
indexmap = { version = "1.9.2", features = ["serde"] }
itertools = "0.10.5"
parking_lot = "0.12"
percent-encoding = "2.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
url = "2.3.1"
rustc-hash = "2.0.0"

[dev-dependencies]
assert_fs = "1.0"
oxc_resolver = "2"
node_resolver = "0.15.0"
criterion = { version = "*", features = ["html_reports"] }
url = "*"
deno_package_json = "0.1.2"
rspack_resolver = "*"

[target.'cfg(windows)'.dev-dependencies]
is_elevated = "0.1.2"


[[bench]]
name = "benchmark"
harness = false
